--- a/PawsyShop.Api/appsettings.json
+++ b/PawsyShop.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WhiteLagoon;TrustedConnection=True;TrustServerCertificate=True"
+  }
 }
