--- a/PawsyShop.Api/PawsyShop.Api.csproj
+++ b/PawsyShop.Api/PawsyShop.Api.csproj
@@ -15,6 +15,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.10" />
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Pawsy.Infrastructure\Pawsy.Infrastructure.csproj" />
+	</ItemGroup>
+
   <ItemGroup>
     <Folder Include="Controllers\" />
   </ItemGroup>
