--- a/Pawsy.Infrastructure/Pawsy.Infrastructure.csproj
+++ b/Pawsy.Infrastructure/Pawsy.Infrastructure.csproj
@@ -18,4 +18,8 @@
     </PackageReference>
   </ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Pawsy.Domain\Pawsy.Domain.csproj" />
+	</ItemGroup>
+
 </Project>
