--- a/PawsyShop.Api/appsettings.json
+++ b/PawsyShop.Api/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=WhiteLagoon;TrustedConnection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.;Database=PawsyShopDb;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
