--- a/Pawsy.Infrastructure/Pawsy.Infrastructure.csproj
+++ b/Pawsy.Infrastructure/Pawsy.Infrastructure.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\Pawsy.Application\Pawsy.Application.csproj" />
 		<ProjectReference Include="..\Pawsy.Domain\Pawsy.Domain.csproj" />
 	</ItemGroup>
 
