--- a/Pawsy.Application/Pawsy.Application.csproj
+++ b/Pawsy.Application/Pawsy.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Pawsy.Domain\Pawsy.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
