--- a/Pawsy.Application/Pawsy.Application.csproj
+++ b/Pawsy.Application/Pawsy.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\Pawsy.Domain\Pawsy.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\Implementation\" />
+    <Folder Include="Services\Interface\" />
+  </ItemGroup>
+
 </Project>
