--- a/Pawsy.Application/Pawsy.Application.csproj
+++ b/Pawsy.Application/Pawsy.Application.csproj
@@ -7,12 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Pawsy.Domain\Pawsy.Domain.csproj" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Services\Implementation\" />
-    <Folder Include="Services\Interface\" />
+    <ProjectReference Include="..\Pawsy.Domain\Pawsy.Domain.csproj" />
   </ItemGroup>
 
 </Project>
