Add login and registration with JWT and refresh token using clean architecture

--- a/PawsyShop.Api/appsettings.json
+++ b/PawsyShop.Api/appsettings.json
@@ -8,5 +8,12 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.;Database=PawsyShopDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Jwt": {
+    "Key": "SuperSecretKeyForPawsyJWTGeneration123!",
+    "Issuer": "PawsyShopAPI",
+    "Audience": "PawsyShopClient",
+    "AccessTokenExpirationMinutes": 15,
+    "RefreshTokenExpirationDays": 7
   }
 }
